--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saudi-career-bot-report",
+  "name": "saudi-career-bot",
   "version": "1.0.0",
   "description": "Career advice chatbot for Saudi Arabian job market with CV analysis",
   "main": "server.js",
@@ -16,7 +16,6 @@
     "i18next-http-middleware": "^3.5.0",
     "body-parser": "^1.20.2",
     "multer": "^1.4.5-lts.1",
-    "mongoose": "^7.5.0",
     "express-session": "^1.17.3",
     "cookie-parser": "^1.4.6",
     "uuid": "^9.0.0"
